tests/rosetta/out/cpp/99-bottles-of-beer.error
g++ error: exit status 1
/tmp/TestMochiCPPGolden99-bottles-of-beer3428733150/001/prog.cpp:15:1: error: ‘::main’ must return ‘int’
   15 | auto main() {
      | ^~~~
/tmp/TestMochiCPPGolden99-bottles-of-beer3428733150/001/prog.cpp:28:5: error: redefinition of ‘int main()’
   28 | int main() {
      |     ^~~~
/tmp/TestMochiCPPGolden99-bottles-of-beer3428733150/001/prog.cpp:15:6: note: ‘int main()’ previously defined here
   15 | auto main() {
      |      ^~~~
